--- a/ParticleSystem.vcxproj
+++ b/ParticleSystem.vcxproj
@@ -152,7 +152,11 @@
     <ClInclude Include="src\particle.h" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="..\..\..\Desktop\particle_example.gif" />
+    <None Include=".gitattributes" />
+    <None Include=".gitignore" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="particle_example.gif" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
